# fti-holdings

./: .agents  .features.json  .gitignore  AGENTS.md  BROKER_AI.md  DATA_MODEL.md  DEPLOYMENT.md  MIGRATION.md  README.md  SPEC.md  STATUS.md  STRATEGY.md  architecture.txt  cron.sh  deploy.sh  orchestrator.lua  prompt.md  pyproject.toml  qa_test.py  qa_test.sh  report.sh  status.sh  stop.sh  strategy1.py  tmux.sh  watch.sh
apps/backend/: pyproject.toml
apps/backend/app/: main.py  verify_bse_quotes.py
apps/backend/app/features/: FeaturesJsonSyncTests.py
apps/backend/app/features/HelloWorld/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/broker/AuthenticateBroker/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/broker/BrokerAuthenticate/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/common/CandleManager/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/common/ManageCandle/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/factory/: settings.yml  spec.md  symbols.yml
apps/backend/app/features/market/FetchQuotes/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/market/HistoricQuotes/: Controller.py  Handler.py  Schema.py  Tests.py  spec.md
apps/backend/app/features/market/QuotesFetch/: Controller.py  Handler.py  (+3 more)
apps/backend/app/features/order/: Handler.py
apps/backend/factory/: auth.yaml  settings.yml  symbols.yml  trade_ratchet.template.yml
(+312 files in other folders)
