[project]
name = "app"
version = "0.1.0"
description = "Ratchet investing strategy — two-book with Fibonacci sizing"
requires-python = ">=3.10, <3.11"
dependencies = [
    "broker-ai",
    "pandas>=2",
    "pendulum>=3",
    "pydantic>=2.13.4",
    "pyotp>=2.9.0",
    "pyyaml>=6.0.3",
    "shared",
    "toolkit",
]

[tool.pytest.ini_options]
python_files = ["*Tests.py", "*test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv.sources]
broker-ai = { git = "https://github.com/pannet1/broker-ai" }
shared = { workspace = true }
toolkit = { git = "https://github.com/pannet1/toolkit" }
